# rusty-sheet

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md
.github/workflows/: MainDistributionPipeline.yml
src/: error.rs  lib.rs
src/bridge/: mod.rs
src/database/: bridge.rs  column.rs  mod.rs  range.rs  table.rs
src/extension/: analyze_sheet.rs  analyze_sheet_table_function.rs  analyze_sheets.rs  mod.rs  read_sheet.rs  read_sheet_table_function.rs  read_sheets.rs  writer.rs
src/helpers/: biff12.rs  biff8.rs  cfb.rs  file_reader.rs  mod.rs  reader.rs  string.rs  xml.rs  zip.rs
src/spreadsheet/: cell.rs  criteria.rs  excel.rs  mod.rs  ods.rs  reference.rs  sheet.rs  xls.rs  xlsb.rs  xlsx.rs
test/sql/: rusty_sheet.test
