[package]
name = "rusty_sheet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "rusty_sheet"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.100"
calamine = { version = "0.29.0", features = ["chrono", "dates"] }
chrono = "0.4.42"
duckdb = { version = "1.4.0", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.10"
libduckdb-sys = { version = "1.4.0", features = ["loadable-extension"] }
parse_duration = "2.1.1"
regex = "1.11.2"
thiserror = "2.0.16"
