[package]
name = "rusty_sheet"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "rusty_sheet"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
codepage = "0.1.2"
duckdb = { version = "1.4.1", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.11"
either = "1.15.0"
encoding_rs = "0.8.35"
glob = "0.3.3"
iso8601-duration = "0.2.0"
libduckdb-sys = { version = "1.4.1", features = ["loadable-extension"] }
quick-xml = "0.38.3"
regex = "1.12.2"
thiserror = "2.0.17"
url = "2.5.3"
zip = { version = "5.1.1", features = ["deflate"] }
